--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#C0C0C0</color>
+    <color name="red">#B90012</color>
+    <color name="red_dark">#B900</color>
+    <color name="red_light">#B90045</color>
 </resources>
