--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
+        app:backgroundTint="@color/red"
         android:layout_marginBottom="16dp"
         app:srcCompat="@drawable/pin_drop" />
 
