--- a/app/src/main/res/drawable/pin_drop.xml
+++ b/app/src/main/res/drawable/pin_drop.xml
@@ -3,6 +3,7 @@
     android:height="48dp"
     android:viewportWidth="960"
     android:viewportHeight="960"
+    android:tint="#FFFFFF"
     >
   <path
       android:fillColor="#FFFFFF"
