--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,25 +15,45 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
             android:gravity="center"
             android:titleTextColor="@color/black"
-            app:title="@string/app_name"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.NavDrawer.PopupOverlay" />
+            app:popupTheme="@style/Theme.NavDrawer.PopupOverlay"
+            app:title="@string/app_name">
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/bbc_wide_logo_red"
+                tools:src="@drawable/bbc_wide_logo_red" />
+
+
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_main" />
 
-<!-- location button-->
+    <!-- location button-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
-        app:backgroundTint="@color/red"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="60dp"
+        app:backgroundTint="@color/white"
         app:srcCompat="@drawable/pin_drop" />
+
+    <!-- Bottom Static Menu -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
+        app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
