--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f2f2f2"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.HomeFragment"
+    >
 
     <!--    home fragment where our content goes -->
     <ImageView
@@ -92,29 +93,5 @@
     <!--        android:orientation="horizontal"-->
     <!--        android:padding="5dp"-->
     <!--        tools:listitem="@layout/item_product" />-->
-
-    <!-- Bottom Static Menu -->
-    <LinearLayout
-        android:id="@+id/bottom_menu"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/white"
-        android:elevation="8dp"
-        android:orientation="horizontal"
-        android:padding="2dp">
-
-        <!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
-        <!--            android:id="@+id/nav_view"-->
-        <!--            android:layout_width="0dp"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginStart="0dp"-->
-        <!--            android:layout_marginEnd="0dp"-->
-        <!--            android:background="?android:attr/windowBackground"-->
-        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--            app:layout_constraintRight_toRightOf="parent"-->
-        <!--            app:menu="@menu/bottom_nav_menu" />-->
-    </LinearLayout>
 
 </RelativeLayout>
