--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -34,7 +34,8 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include android:id="@+id/homepage"
+        layout="@layout/content_main" />
 
     <!-- location button-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
