--- a/app/src/main/res/layout/fragment_bottom_dialog.xml
+++ b/app/src/main/res/layout/fragment_bottom_dialog.xml
@@ -25,7 +25,7 @@
         tools:ignore="HardcodedText" />
 
     <EditText
-        android:inputType="number"
+        android:inputType="text"
         android:id="@+id/latitudeEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@id/coordinateLabelText" />
 
     <EditText
-        android:inputType="number"
+        android:inputType="text"
         android:id="@+id/longitudeEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
