--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,4 +17,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
+    <include android:id="@+id/homefragment"
+        layout="@layout/fragment_home" />
 </androidx.constraintlayout.widget.ConstraintLayout>
