--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.home.HomeFragment"
     >
 
-    <!--    home fragment where our content goes -->
+    <!-- Home fragment where our content goes -->
     <ImageView
         android:id="@+id/Image"
         android:layout_width="400dp"
@@ -43,55 +43,56 @@
     <!-- Our Ad Image -->
     <ImageView
         android:id="@+id/adImage"
-        android:layout_width="400dp"
-        android:layout_height="150dp"
+        android:layout_width="180dp"
+        android:layout_height="240dp"
         android:layout_below="@id/LabelText"
+        android:layout_alignParentRight="true"
         android:layout_gravity="center"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:scaleType="fitXY"
-        android:src="@drawable/banner_1"
-        tools:src="@drawable/banner_1" />
+        android:src="@drawable/default_one"
+        tools:src="@drawable/default_one" />
 
     <TextView
         android:id="@+id/adText"
-        style="@style/TextAppearance.Material3.BodyLarge"
+        android:textStyle="bold"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/LabelText"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginTop="130dp"
+        android:layout_below="@id/adImage"
         android:layout_alignParentRight="true"
-        android:gravity= "center_vertical|right"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginEnd="5dp"
+        android:gravity="center_vertical|right"
         android:paddingEnd="5dp"
         android:text="Powered by Walmart DSP"
-        android:textColor="@color/grey_dark"
+        android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="HardcodedText" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Image"
+        android:layout_marginTop="-5dp"
+        android:orientation="horizontal"
+        tools:listitem="@layout/item_product" />
 
     <!-- Banner Carousel -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categoryRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/adImage"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
-        android:paddingStart="5dp" />
-
-    <!--   Will do this later-->
-    <!--    <androidx.recyclerview.widget.RecyclerView-->
-    <!--        android:id="@+id/recyclerView"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_below="@id/categoryRecyclerView"-->
-    <!--        android:layout_marginTop="10dp"-->
-    <!--        android:orientation="horizontal"-->
-    <!--        android:padding="5dp"-->
-    <!--        tools:listitem="@layout/item_product" />-->
+        android:paddingStart="5dp"
+        tools:listitem="@layout/item_category" />
 
 </RelativeLayout>
