--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,13 +2,13 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/newspaper"
-        android:title="Trending" />
+        android:title="" />
     <item
         android:id="@+id/nav_favorites"
         android:icon="@drawable/notifications"
-        android:title="Favorites" />
+        android:title="" />
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/account_circle"
-        android:title="Profile" />
+        android:title="" />
 </menu>
