--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,6 +18,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
 
-    <include android:id="@+id/homefragment"
-        layout="@layout/fragment_home" />
+<!--    <include android:id="@+id/homefragment"-->
+<!--        layout="@layout/fragment_home" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
