--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,12 +29,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Image"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="2dp"
         android:layout_alignParentRight="true"
         android:gravity= "center_vertical|right"
         android:paddingEnd="5dp"
-        android:text="Powered by Walmart DSP"
+        android:text= "ADVERTISEMENT"
         android:textColor="@color/grey_dark"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,8 +53,8 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:scaleType="fitXY"
-        android:src="@drawable/default_one"
-        tools:src="@drawable/default_one" />
+        android:src="@drawable/bbc_default"
+        tools:src="@drawable/bbc_default" />
 
     <TextView
         android:id="@+id/adText"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="5dp"
         android:gravity="center_vertical|right"
         android:paddingEnd="5dp"
-        android:text="Powered by Walmart DSP"
+        tools:text="Powered by Walmart DSP"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,11 +77,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/Image"
-        android:layout_marginTop="-5dp"
-        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:orientation="vertical"
         tools:listitem="@layout/item_product" />
 
     <!-- Banner Carousel -->
@@ -90,8 +90,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/adImage"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        android:nestedScrollingEnabled="false"
+        android:orientation="vertical"
         android:paddingStart="5dp"
         tools:listitem="@layout/item_category" />
 
