--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -8,7 +8,7 @@
 
     <!-- Product Card -->
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:clickable="true"
@@ -18,10 +18,10 @@
         <!-- Product Image -->
         <ImageView
             android:id="@+id/productImage"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:scaleType="fitCenter"
-            tools:src="@drawable/carousel1" />
+            tools:src="@drawable/carousel_first" />
 
     </androidx.cardview.widget.CardView>
 
